<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/crypto_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crypto_description_text"/>

    <include
        android:id="@+id/progress_layout"
        layout="@layout/activity_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/crypto_sub"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/crypto_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/generic_input_text"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions|textMultiLine|textVisiblePassword"
            android:lines="1" />

        <Button
            android:id="@+id/crypto_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/generic_start_text" />

        <Button
            android:id="@+id/crypto_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:minWidth="0dp"
            android:text="@string/generic_stop_text" />

        <Button
            android:id="@+id/crypto_DoneInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/crypto_done_text"
            android:visibility="gone"/>

        <Button
            android:id="@+id/crypto_ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/generic_clear_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ListView
            android:id="@+id/noResultsYetMessage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:entries="@array/generic_no_results_yet_text"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:id="@+id/crypto_results"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:entries="@array/generic_no_results_yet_text"/>

</LinearLayout>