<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.huntersmeadow.wordpuzzleassist.activities.DictionaryActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <include
        android:id="@+id/progress_layout"
        layout="@layout/activity_progress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <ProgressBar
        android:id="@+id/dummyProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <Button
        android:id="@+id/dummyStopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dictionary_description_text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/dictionary_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textVisiblePassword"
            android:hint="@string/dictionary_input_text"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/dictionary_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/dictionary_search_text" />

        <Button
            android:id="@+id/dictionary_ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:text="@string/generic_clear_text" />
    </LinearLayout>


    <ListView
        android:id="@+id/dictionary_results"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:entries="@array/generic_no_results_yet_text"/>


</LinearLayout>